Bug 729685 - Add Windows timezone name support using ICU conversion. r=mkmelin

This patch fixes calendar import from Exchange/Office 365 servers that use
Windows timezone names (e.g., "Romance Standard Time") by converting them to
IANA timezone IDs (e.g., "Europe/Paris") using ICU's built-in
TimeZone::getIDForWindowsID() function.

The conversion is attempted before timezone lookup and falls back to the
original ID if conversion fails, making this change backward compatible.

Includes corresponding test.

Differential Revision: https://phabricator.services.mozilla.com/D278152

--HG--
extra : amend_source : 369581b96204ce2ed6a076d55f682747159db74a